--- a/css/myfun.css
+++ b/css/myfun.css
@@ -2,8 +2,9 @@
 
 body, html {
     
-    margin: 0;
+    margin: auto;
     background-color:#9acd32;
+    padding: 2px;
     
 }
 header{
@@ -96,11 +97,14 @@ li {
     margin-right:0.5cm;
 }
  img{
-    padding: 2px;
+    padding-left: 3px;
+    padding-right: 3px;
     border-style: ridge;
     border-style: outset;
     border-color: #ff0000 #00ff00 #0000ff;
     border-width: medium;
+    margin-right: auto;
+    margin-left: auto;
  }
 
 
@@ -119,9 +123,9 @@ p {
 p3{
     
 text-align:center;
-font-size: 1.5em; 
-padding: 32px;
-margin: 0;
+font-size: 2em; 
+padding: 33px;
+margin-left: 2px;
 
 }
 
